masthead gap fix for mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -61,7 +61,7 @@ body {
 @media screen and (max-width: 825px) {
 
   #masthead-header{
-    margin-bottom: -0.8%;
+    margin-bottom: -1.5%;
   }
 
   #cover1 img {
